Fix on mobile version

--- a/app/assets/stylesheets/2019/welcome.css.scss
+++ b/app/assets/stylesheets/2019/welcome.css.scss
@@ -17,7 +17,7 @@ body#acc2019 {
     background-size:  cover;
     background-repeat: no-repeat;
     background-position:  0% -25%;
-    padding: 65px 50px;
+    padding: 78px 50px;
     text-align: center;
     
     a#subscribe-now {
@@ -300,7 +300,6 @@ body#acc2019 {
     background-image: url(image-path('bg-footer.png'));
     height: 93px;
   }
-  
  
   .submission {
     padding-top: 100px;
